--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  background-color: var(--color-cream);
 }
 
 .logo {
